Incluindo seções About e Portfolio já com a estrutura em bootstrap

--- a/index.html
+++ b/index.html
@@ -1,9 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rai Gomes: Portfolio Pessoal</title>
+	<title>Rai Gomes: Portfolio Pessoal</title>	
+	<link rel="stylesheet" href="css/estilo.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">		
 </head>
 <body>
-	<h1>Hello World</h1>
+	<nav id="menu" class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a href="#">			
+					<img id="logo" src="https://images.vexels.com/media/users/3/128080/isolated/lists/ba993e973cf5536cc3a2867c860f4f51-copo-de-ch-quente.png" width="24" height="24" />			
+				</a>	
+			</div>
+			<ul class="nav navbar-nav">
+				<li><a href="#">Sobre</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<section id="sobre" class="row">
+			<div id="sobre-descricao" class="col-md-8">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique, enim at iste est reprehenderit, deserunt recusandae labore iure ad voluptate numquam aliquid soluta aperiam, distinctio blanditiis dolorem debitis hic!
+			</div>
+			<div id="sobre-photo" class="col-md-4">
+				<img src="https://pbs.twimg.com/profile_images/614649957879021568/UcwL41cw.jpg" alt="Rai" class="img-circle img-responsive">
+			</div>
+		</section>
+		<section id="portfolio">
+			<h2>Portfolio</h2>			
+			<div class="row">
+				<div class="col-md-6">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+							<figure class="figure">
+								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
+								<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, assumenda.</figcaption>
+							</figure>
+						</a></div>
+				</div>
+				<div class="col-md-6">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+							<figure class="figure">
+								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
+								<figcaption class="figure-caption port-caption">Similique accusantium nihil saepe, laudantium fugiat, recusandae id illum sed.</figcaption>
+							</figure>
+						</a></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+							<figure class="figure">
+								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
+								<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, libero!</figcaption>
+							</figure>
+						</a></div>
+				</div>
+				<div class="col-md-6">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+							<figure class="figure">
+								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
+								<figcaption class="figure-caption port-caption">Architecto assumenda, est quo accusantium vitae adipisci dignissimos repellendus asperiores?</figcaption>
+							</figure>
+						</a></div>
+				</div>
+			</div>
+		</section>
+		<section id="contato">
+
+		</section>
+		<footer>
+
+		</footer>
+	</div>
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Bootstrap library -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
