--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a href="#"><img id="logo" src="img/cafe.png"/></a>			
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#menu-itens" aria-expanded="false">Menu</button>				
+				<a href="#" class="navbar-brand" rel="nofollow">					
+					<span>
+						<img id="logo" src="img/cafe.png"/>	
+						Rai Gomes
+					</span>
+				</a>				
 			</div>
 			<div id="menu-itens" class="navbar-collapse collapse" aria-expanded="false">
 				<ul class="nav navbar-nav navbar-right">
@@ -21,62 +26,92 @@
 				</ul>
 			</div>
 		</div>
-	</nav>
-	<div class="container">
-		<section id="sobre">			
-			<div id="sobre-photo">
-				<img src="img/Rai.jpg" class="img-circle img-responsive"/>
-			</div>
-			<div id="sobre-descricao">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique, enim at iste est reprehenderit, deserunt recusandae labore iure ad voluptate numquam aliquid soluta aperiam, distinctio blanditiis dolorem debitis hic!</p>
-			</div>
-		</section>
-		<section id="portfolio">
-			<h1>Portfolio</h1>
+	</nav>	
+	<section id="sobre">
+		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
-					<div class="thumbnail"><a href="https://github.com/raigomes">
-							<figure class="figure">
-								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
-								<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, assumenda.</figcaption>
-							</figure>
-						</a></div>
+				<div class="col-md-4">
+					<div id="sobre-photo">
+						<img src="img/Rai.jpg" class="img-circle img-responsive"/>
+					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="thumbnail"><a href="https://github.com/raigomes">
-							<figure class="figure">
-								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
-								<figcaption class="figure-caption port-caption">Similique accusantium nihil saepe, laudantium fugiat, recusandae id illum sed.</figcaption>
-							</figure>
-						</a></div>
+				<div class="col-md-8">
+					<div id="sobre-descricao">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique, enim at iste est reprehenderit, deserunt recusandae labore iure ad voluptate numquam aliquid soluta aperiam, distinctio blanditiis dolorem debitis hic!</p>
+					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section id="portfolio">
+		<h1>Portfolio</h1><hr>		
+		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div id="port1" class="col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
-							<figure class="figure">
-								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
-								<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, libero!</figcaption>
-							</figure>
-						</a></div>
+						<figure class="figure">
+							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
+							<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, assumenda.</figcaption>
+						</figure>
+					</a></div>
 				</div>
-				<div class="col-md-6">
+				<div id="port2" class="col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
-							<figure class="figure">
-								<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
-								<figcaption class="figure-caption port-caption">Architecto assumenda, est quo accusantium vitae adipisci dignissimos repellendus asperiores?</figcaption>
-							</figure>
-						</a></div>
+						<figure class="figure">
+							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
+							<figcaption class="figure-caption port-caption">Similique accusantium nihil saepe, laudantium fugiat, recusandae id illum sed.</figcaption>
+						</figure>
+					</a></div>
+				</div>
+				<div id="port3" class="col-md-3">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+						<figure class="figure">
+							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
+							<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, libero!</figcaption>
+						</figure>
+					</a></div>
+				</div>
+				<div id="port4" class="col-md-3">
+					<div class="thumbnail"><a href="https://github.com/raigomes">
+						<figure class="figure">
+							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
+							<figcaption class="figure-caption port-caption">Architecto assumenda, est quo accusantium vitae adipisci dignissimos repellendus asperiores?</figcaption>
+						</figure>
+					</a></div>
 				</div>
 			</div>
-		</section>
-		<section id="contato">
+		</div>
+	</section>
+	<section id="contato">
+		<h1>Contato</h1><hr>
+		<form action="" id="email">
+			<div class="container">
+				<div id="form1" class="row form">
+					<div class="col-xs-4 col-md-4"><label for="form-name">Nome: </label></div>
+					<div class="col-xs-8 col-md-8"><input type="text" id="form-name" name="form-name"></div>
 
-		</section>
-		<footer>
+				</div>
+				<div id="form2" class="row form">
+					<div class="col-xs-4 col-md-4"><label for="form-email">Email: </label></div>
+					<div class="col-xs-8 col-md-8"><input type="email" id="form-email" name="form-email"></div>
+				</div>
+				<div id="form3" class="row form">
+					<div class="col-xs-4 col-md-4"><label for="form-phone">Telefone: </label></div>
+					<div class="col-xs-8 col-md-8"><input type="text" id="form-phone" name="form-phone"></div>
+				</div>
+				<div id="form4" class="row form">
+					<div class="col-xs-4 col-md-4"><label for="form-message">Mensagem: </label></div>
+					<div class="col-xs-8 col-md-8"><textarea id="form-message"></textarea></div>
+				</div>
+				<div id="form5" class="row form">					
+					<div class="col-xs-12 col-md-12"><input type="submit" id="form-message" name="form-message"></div>
+				</div>
+			</div>
+		</form>
+	</section>
+	<footer>
 
-		</footer>
-	</div>
+	</footer>
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Bootstrap library -->
