Ajustando título no menu

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#menu-itens" aria-expanded="false">Menu</button>				
 				<a href="#" class="navbar-brand" rel="nofollow">					
 					<span>
-						<img id="logo" src="img/cafe.png"/>	
-						Rai Gomes
+						<img id="logo" src="img/cafe.png"/>Rai Gomes
 					</span>
 				</a>				
 			</div>
