--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Rai Gomes: Portfolio Pessoal</title>	
 	<link rel="stylesheet" href="css/estilo.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">		
+	<link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/font-awesome.min.css" crossorigin="anonymous">
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>	
@@ -83,7 +85,7 @@
 	</section>
 	<section id="contato">
 		<h1>Contato</h1><hr>
-		<form action="" id="email">
+		<form action="" id="contato-email">
 			<div class="container">
 				<div id="form1" class="row form">
 					<div class="col-xs-4 col-md-4"><label for="form-name">Nome: </label></div>
@@ -107,13 +109,26 @@
 				</div>
 			</div>
 		</form>
+		<hr>	
+		<div id="contato-social">
+			<div class="container">			
+				<div class="row">
+					<div class="col-xs-3 col-md-3"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
+					<div class="col-xs-3 col-md-3"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
+					<div class="col-xs-3 col-md-3"><a href="https://github.com/raigomes" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+					<div class="col-xs-3 col-md-3"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<footer>
 
 	</footer>
 	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap library -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+	<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
