--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#menu-itens" aria-expanded="false">Menu</button>				
 				<a href="#" class="navbar-brand" rel="nofollow">					
 					<span>
-						<img id="logo" src="img/cafe.png"/>Rai Gomes
+						<img id="logo" src="img/cafe.png"/>Rai Gomes						
 					</span>
 				</a>				
 			</div>
@@ -34,6 +34,7 @@
 				<div class="col-md-4">
 					<div id="sobre-photo">
 						<img src="img/Rai.jpg" class="img-circle img-responsive"/>
+						<!--<img src="https://lhvndq-ch3301.files.1drv.com/y4m_HUK3hq6yFYT6EKGaj0UV2Ecu0aqde_rvI_CjRLWXGcXJHrQ_u-G7GBps2YyLzyGT8R4tuBfzg0EG5OrMJC2rgSfo74y4Wv-Wfu3BD5JIWjO5TF6niS84GqIQ0RfJlFfqA5GAi_UwR0SDisOqjzcBWOVSsh3qOEvuPHB2IZpWWpk2XB28iYpSte18yS766fcESUA2sToSOc4uYpLPdJfBg?width=457&height=336&cropmode=none" width="457" height="336" class="img-circle img-responsive" />-->
 					</div>
 				</div>
 				<div class="col-md-8">
@@ -122,7 +123,18 @@
 		</div>
 	</section>
 	<footer>
-
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6 col-md-6">					
+					<h4 class="rodape">Rai Gomes &#9400; 2017. All Rights Reserved</h4>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h4 class="rodape">
+						<span>Coded by:<br><strong>Rai Gomes</strong></span>
+					</h4>					
+				</div>
+			</div>
+		</div>
 	</footer>
 	<!-- jQuery library -->
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
