Ajustando campos do formulário de contato

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
 		<h1>Contato</h1><hr>
 		<form action="" id="contato-email">
 			<div class="container">
-				<div id="form1" class="row form">
+				<div id="form1" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-name">Nome: </label></div>
-					<div class="col-xs-8 col-md-8"><input type="text" id="form-name" name="form-name"></div>
+					<div class="col-xs-8 col-md-8"><input type="text" id="form-name" class="form" name="form-name"></div>
 
 				</div>
-				<div id="form2" class="row form">
+				<div id="form2" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-email">Email: </label></div>
-					<div class="col-xs-8 col-md-8"><input type="email" id="form-email" name="form-email"></div>
+					<div class="col-xs-8 col-md-8"><input type="email" id="form-email" class="form" name="form-email"></div>
 				</div>
-				<div id="form3" class="row form">
+				<div id="form3" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-phone">Telefone: </label></div>
-					<div class="col-xs-8 col-md-8"><input type="text" id="form-phone" name="form-phone"></div>
+					<div class="col-xs-8 col-md-8"><input type="text" id="form-phone" class="form" name="form-phone"></div>
 				</div>
-				<div id="form4" class="row form">
+				<div id="form4" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-message">Mensagem: </label></div>
-					<div class="col-xs-8 col-md-8"><textarea id="form-message"></textarea></div>
+					<div class="col-xs-8 col-md-8"><textarea id="form-message" class="form"></textarea></div>
 				</div>
-				<div id="form5" class="row form">					
-					<div class="col-xs-12 col-md-12"><input type="submit" id="form-message" name="form-message"></div>
+				<div id="form5" class="row">					
+					<div class="col-xs-12 col-md-12"><input type="submit" id="form-message" class="btn form" name="form-message"></div>
 				</div>
 			</div>
 		</form>
