--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/font-awesome.min.css" crossorigin="anonymous">
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>	
@@ -21,9 +22,9 @@
 			</div>
 			<div id="menu-itens" class="navbar-collapse collapse" aria-expanded="false">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Sobre</a></li>
+					<li><a href="#">About</a></li>
 					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Contato</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -39,8 +40,22 @@
 				</div>
 				<div class="col-md-8">
 					<div id="sobre-descricao">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium similique, enim at iste est reprehenderit, deserunt recusandae labore iure ad voluptate numquam aliquid soluta aperiam, distinctio blanditiis dolorem debitis hic!</p>
+						<p>I'm a brazilian developer and I have a bachelor degree in Computer Science at Federal Fluminense University in Rio de Janeiro.</p>
+						<p>I'm studying to improve my technology skills and become a fullstack developer</p>
 					</div>
+				</div>				
+			</div>
+			<div id="sobre-skills">
+				<div class="row">
+					<h4>My skills:</h4>
+				</div>
+				<div class="row row-icon">
+					<div class="skills-icon col-xs-4"><i class="devicon-html5-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-css3-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-javascript-plain colored"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-jquery-plain-wordmark colored"></i>	</div>
+					<div class="skills-icon col-xs-4"><i class="devicon-java-plain-wordmark"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-oracle-original colored"></i></div>
 				</div>
 			</div>
 		</div>
@@ -85,11 +100,11 @@
 		</div>
 	</section>
 	<section id="contato">
-		<h1>Contato</h1><hr>
+		<h1>Contact</h1><hr>
 		<form action="" id="contato-email">
 			<div class="container">
 				<div id="form1" class="row">
-					<div class="col-xs-4 col-md-4"><label for="form-name">Nome: </label></div>
+					<div class="col-xs-4 col-md-4"><label for="form-name">Name: </label></div>
 					<div class="col-xs-8 col-md-8"><input type="text" id="form-name" class="form" name="form-name"></div>
 
 				</div>
@@ -98,16 +113,16 @@
 					<div class="col-xs-8 col-md-8"><input type="email" id="form-email" class="form" name="form-email"></div>
 				</div>
 				<div id="form3" class="row">
-					<div class="col-xs-4 col-md-4"><label for="form-phone">Telefone: </label></div>
+					<div class="col-xs-4 col-md-4"><label for="form-phone">Phone: </label></div>
 					<div class="col-xs-8 col-md-8"><input type="text" id="form-phone" class="form" name="form-phone"></div>
 				</div>
 				<div id="form4" class="row">
-					<div class="col-xs-4 col-md-4"><label for="form-message">Mensagem: </label></div>
+					<div class="col-xs-4 col-md-4"><label for="form-message">Message: </label></div>
 					<div class="col-xs-8 col-md-8"><textarea id="form-message" class="form"></textarea></div>
 				</div>
 				<div id="form5" class="row">					
 					<div class="col-xs-12 col-md-12"><input type="submit" id="form-message" class="btn form" name="form-message"></div>
-				</div>
+				</div>				
 			</div>
 		</form>
 		<hr>	
@@ -117,7 +132,7 @@
 					<div class="col-xs-3 col-md-3"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
 					<div class="col-xs-3 col-md-3"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
 					<div class="col-xs-3 col-md-3"><a href="https://github.com/raigomes" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-					<div class="col-xs-3 col-md-3"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>
+					<div class="col-xs-3 col-md-3"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>		
 				</div>
 			</div>
 		</div>
