--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 				<div class="row row-icon">
 					<div class="skills-icon col-xs-4"><i class="devicon-html5-plain-wordmark colored"></i></div>
 					<div class="skills-icon col-xs-4"><i class="devicon-css3-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-bootstrap-plain colored"></i></div>
 					<div class="skills-icon col-xs-4"><i class="devicon-javascript-plain colored"></i></div>
 					<div class="skills-icon col-xs-4"><i class="devicon-jquery-plain-wordmark colored"></i>	</div>
-					<div class="skills-icon col-xs-4"><i class="devicon-java-plain-wordmark"></i></div>
-					<div class="skills-icon col-xs-4"><i class="devicon-oracle-original colored"></i></div>
+					<div class="skills-icon col-xs-4"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-6"><i class="devicon-java-plain-wordmark"></i></div>
+					<div class="skills-icon col-xs-6"><i class="devicon-oracle-original colored"></i></div>
 				</div>
 			</div>
 		</div>
