--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target="#menu-itens" aria-expanded="false">Menu</button>				
-				<a href="#" class="navbar-brand" rel="nofollow">					
-					<span>
-						<img id="logo" src="img/cafe.png"/>Rai Gomes						
-					</span>
-				</a>				
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#menu-itens" aria-expanded="false">Menu</button>
+				<div id="logo">	
+					<a href="#" class="navbar-brand" rel="nofollow">
+						<span>
+							<img src="img/cafe.png"/>Rai Gomes
+						</span>
+					</a>			
+				</div>	
 			</div>
 			<div id="menu-itens" class="navbar-collapse collapse" aria-expanded="false">
 				<ul class="nav navbar-nav navbar-right">
@@ -32,13 +34,13 @@
 	<section id="sobre">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-sm-4 col-md-4">
 					<div id="sobre-photo">
 						<img src="img/Rai.jpg" class="img-circle img-responsive"/>
 						<!--<img src="https://lhvndq-ch3301.files.1drv.com/y4m_HUK3hq6yFYT6EKGaj0UV2Ecu0aqde_rvI_CjRLWXGcXJHrQ_u-G7GBps2YyLzyGT8R4tuBfzg0EG5OrMJC2rgSfo74y4Wv-Wfu3BD5JIWjO5TF6niS84GqIQ0RfJlFfqA5GAi_UwR0SDisOqjzcBWOVSsh3qOEvuPHB2IZpWWpk2XB28iYpSte18yS766fcESUA2sToSOc4uYpLPdJfBg?width=457&height=336&cropmode=none" width="457" height="336" class="img-circle img-responsive" />-->
 					</div>
 				</div>
-				<div class="col-md-8">
+				<div class="col-sm-8 col-md-8">
 					<div id="sobre-descricao">
 						<p>I'm a brazilian developer and I have a bachelor degree in Computer Science at Federal Fluminense University in Rio de Janeiro.</p>
 						<p>I'm studying to improve my technology skills and become a fullstack developer</p>
@@ -50,14 +52,14 @@
 					<h4>My skills:</h4>
 				</div>
 				<div class="row row-icon">
-					<div class="skills-icon col-xs-4"><i class="devicon-html5-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4"><i class="devicon-css3-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4"><i class="devicon-bootstrap-plain colored"></i></div>
-					<div class="skills-icon col-xs-4"><i class="devicon-javascript-plain colored"></i></div>
-					<div class="skills-icon col-xs-4"><i class="devicon-jquery-plain-wordmark colored"></i>	</div>
-					<div class="skills-icon col-xs-4"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-6"><i class="devicon-java-plain-wordmark"></i></div>
-					<div class="skills-icon col-xs-6"><i class="devicon-oracle-original colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-html5-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-css3-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-bootstrap-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-javascript-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-jquery-plain-wordmark colored"></i>	</div>
+					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-6 col-sm-3 col-md-3"><i class="devicon-java-plain-wordmark"></i></div>
+					<div class="skills-icon col-xs-6 col-sm-3 col-md-3"><i class="devicon-oracle-original colored"></i></div>
 				</div>
 			</div>
 		</div>
@@ -66,7 +68,7 @@
 		<h1>Portfolio</h1><hr>		
 		<div class="container">
 			<div class="row">
-				<div id="port1" class="col-md-3">
+				<div id="port1" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
@@ -74,7 +76,7 @@
 						</figure>
 					</a></div>
 				</div>
-				<div id="port2" class="col-md-3">
+				<div id="port2" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
@@ -82,7 +84,7 @@
 						</figure>
 					</a></div>
 				</div>
-				<div id="port3" class="col-md-3">
+				<div id="port3" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
@@ -90,7 +92,7 @@
 						</figure>
 					</a></div>
 				</div>
-				<div id="port4" class="col-md-3">
+				<div id="port4" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
@@ -123,13 +125,14 @@
 					<div class="col-xs-8 col-md-8"><textarea id="form-message" class="form"></textarea></div>
 				</div>
 				<div id="form5" class="row">					
-					<div class="col-xs-12 col-md-12"><input type="submit" id="form-message" class="btn form" name="form-message"></div>
+					<div class="col-xs-12 col-md-12"><input type="submit" id="form-submit" class="btn btn-lg form" name="form-submit"></div>
 				</div>				
 			</div>
 		</form>
 		<hr>	
 		<div id="contato-social">
-			<div class="container">			
+			<div class="container">	
+				<h1 id="social-title">Social Media</h1>
 				<div class="row">
 					<div class="col-xs-3 col-md-3"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
 					<div class="col-xs-3 col-md-3"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
