Ajustando layout do formulário de contatos e do site para Desktop

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</div>
 			<div id="menu-itens" class="navbar-collapse collapse" aria-expanded="false">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">About</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#sobre">About</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contato">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -128,11 +128,10 @@
 					<div class="col-xs-12 col-md-12"><input type="submit" id="form-submit" class="btn btn-lg form" name="form-submit"></div>
 				</div>				
 			</div>
-		</form>
-		<hr>	
+		</form>		
 		<div id="contato-social">
 			<div class="container">	
-				<h1 id="social-title">Social Media</h1>
+				<h1 id="social-title">Social Media</h1><hr>
 				<div class="row">
 					<div class="col-xs-3 col-md-3"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
 					<div class="col-xs-3 col-md-3"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
@@ -145,10 +144,10 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6 col-md-6">					
+				<div class="col-xs-10 col-md-10">					
 					<h4 class="rodape">Rai Gomes &#9400; 2017. All Rights Reserved</h4>
 				</div>
-				<div class="col-xs-6 col-md-6">
+				<div class="col-xs-2 col-md-2">
 					<h4 class="rodape">
 						<span>Coded by:<br><strong>Rai Gomes</strong></span>
 					</h4>					
