--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
-							<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, assumenda.</figcaption>
+							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
 				</div>
@@ -80,7 +80,7 @@
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
-							<figcaption class="figure-caption port-caption">Similique accusantium nihil saepe, laudantium fugiat, recusandae id illum sed.</figcaption>
+							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
 				</div>
@@ -88,7 +88,7 @@
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
-							<figcaption class="figure-caption port-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, libero!</figcaption>
+							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
 				</div>
@@ -96,7 +96,7 @@
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
 							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
-							<figcaption class="figure-caption port-caption">Architecto assumenda, est quo accusantium vitae adipisci dignissimos repellendus asperiores?</figcaption>
+							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
 				</div>
