Substituindo imagens pelos suas respectivas urls

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" href="css/estilo.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/font-awesome.min.css" crossorigin="anonymous">
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->	
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>	
@@ -17,7 +18,8 @@
 				<div id="logo">	
 					<a href="#" class="navbar-brand" rel="nofollow">
 						<span>
-							<img src="img/cafe.png"/>Rai Gomes
+							<!--<img src="img/cafe.png"/>Rai Gomes-->
+							<img src="https://lhvqdq-ch3301.files.1drv.com/y4pqVxO0eCEAuh4zwjq06HGKURhzuJU_OokVGoA9oXm9b_4tFZ8C3hJ2Chaf0YhRu_YdkeJ8EYulQiHgGYsMJHPIy82f2Qk6-fkry0q2oa3QzbyTTPjaipbdT3lKq_eSmElpsO0YvWmIIkkMvl2EoUwGp8uDmeOHgv1_OL_JMh3k3sLFTZLL_ppAcsD9_AOojruzbXD1ZFCbLDXY0sfFNVITw/cafe.png?psid=1" width="48" height="48" />Rai Gomes
 						</span>
 					</a>			
 				</div>	
@@ -36,8 +38,8 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-4">
 					<div id="sobre-photo">
-						<img src="img/Rai.jpg" class="img-circle img-responsive"/>
-						<!--<img src="https://lhvndq-ch3301.files.1drv.com/y4m_HUK3hq6yFYT6EKGaj0UV2Ecu0aqde_rvI_CjRLWXGcXJHrQ_u-G7GBps2YyLzyGT8R4tuBfzg0EG5OrMJC2rgSfo74y4Wv-Wfu3BD5JIWjO5TF6niS84GqIQ0RfJlFfqA5GAi_UwR0SDisOqjzcBWOVSsh3qOEvuPHB2IZpWWpk2XB28iYpSte18yS766fcESUA2sToSOc4uYpLPdJfBg?width=457&height=336&cropmode=none" width="457" height="336" class="img-circle img-responsive" />-->
+						<!--<img src="img/Rai.jpg" class="img-circle img-responsive"/>-->
+						<img src="https://lhvndq-ch3301.files.1drv.com/y4m_HUK3hq6yFYT6EKGaj0UV2Ecu0aqde_rvI_CjRLWXGcXJHrQ_u-G7GBps2YyLzyGT8R4tuBfzg0EG5OrMJC2rgSfo74y4Wv-Wfu3BD5JIWjO5TF6niS84GqIQ0RfJlFfqA5GAi_UwR0SDisOqjzcBWOVSsh3qOEvuPHB2IZpWWpk2XB28iYpSte18yS766fcESUA2sToSOc4uYpLPdJfBg?width=457&height=336&cropmode=none" width="457" height="336" class="img-circle img-responsive" />
 					</div>
 				</div>
 				<div class="col-sm-8 col-md-8">
@@ -52,14 +54,15 @@
 					<h4>My skills:</h4>
 				</div>
 				<div class="row row-icon">
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-html5-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-css3-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-bootstrap-plain colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-javascript-plain colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-jquery-plain-wordmark colored"></i>	</div>
-					<div class="skills-icon col-xs-4 col-sm-3 col-md-3"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-6 col-sm-3 col-md-3"><i class="devicon-java-plain-wordmark"></i></div>
-					<div class="skills-icon col-xs-6 col-sm-3 col-md-3"><i class="devicon-oracle-original colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-html5-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-css3-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-bootstrap-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-javascript-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-jquery-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><img src="https://lhvrdq-ch3301.files.1drv.com/y4pknmGKsmJKIY6okjbnkXDIslCqfUaEeW2bsq3jv9X5VVmukOhhAjw4aK0J26qtc6zaPPxUw1YrMl6mvQWSOUi-93w-_4QOVFqyRC2-dknxaq2GHCCf_hQ03TilAgl5ObSJi4lwX4L4g97HfkYJzm-SZ2T5FnKGS3iuk0R8-8BGgeZi1RExVMxj0jFXwe3N6s8PYF434ccD80pnhqK2jMQMw/pega.png?psid=1"></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-java-plain-wordmark"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-oracle-original colored"></i></div>					
 				</div>
 			</div>
 		</div>
@@ -71,7 +74,7 @@
 				<div id="port1" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
+							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-1">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -79,7 +82,7 @@
 				<div id="port2" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
+							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-2">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -87,7 +90,7 @@
 				<div id="port3" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
+							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-3">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -95,7 +98,7 @@
 				<div id="port4" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="./img/default.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
+							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-4">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
