--- a/index.html
+++ b/index.html
@@ -135,11 +135,12 @@
 		<div id="contato-social">
 			<div class="container">	
 				<h1 id="social-title">Social Media</h1><hr>
-				<div class="row">
-					<div class="col-xs-3 col-md-3"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
-					<div class="col-xs-3 col-md-3"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
-					<div class="col-xs-3 col-md-3"><a href="https://github.com/raigomes" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-					<div class="col-xs-3 col-md-3"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>		
+				<div id="social-button" class="row">
+					<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://github.com/raigomes" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://codepen.io/raigomes" class="btn btn-default"><i class="fa fa-codepen" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 		</div>
