--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li><a href="#sobre">About</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contato">Contact</a></li>
+					<li><a href="#contato-social">Social</a></li>
 				</ul>
 			</div>
 		</div>
