Implementando lógica de preenchimento do client de email com JavaScript

--- a/index.html
+++ b/index.html
@@ -109,26 +109,26 @@
 	</section>
 	<section id="contato">
 		<h1>Contact</h1><hr>
-		<form action="" id="contato-email">
+		<form name="form" action="javascript:carregaEmail();" method="get" id="contato-email">
 			<div class="container">
-				<div id="form1" class="row">
+				<div id="form-item1" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-name">Name: </label></div>
 					<div class="col-xs-8 col-md-8"><input type="text" id="form-name" class="form" name="form-name"></div>
 
 				</div>
-				<div id="form2" class="row">
+				<div id="form-item2" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-email">Email: </label></div>
 					<div class="col-xs-8 col-md-8"><input type="email" id="form-email" class="form" name="form-email"></div>
 				</div>
-				<div id="form3" class="row">
+				<div id="form-item3" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-phone">Phone: </label></div>
 					<div class="col-xs-8 col-md-8"><input type="text" id="form-phone" class="form" name="form-phone"></div>
 				</div>
-				<div id="form4" class="row">
+				<div id="form-item4" class="row">
 					<div class="col-xs-4 col-md-4"><label for="form-message">Message: </label></div>
 					<div class="col-xs-8 col-md-8"><textarea id="form-message" class="form"></textarea></div>
 				</div>
-				<div id="form5" class="row">					
+				<div id="form-item5" class="row">					
 					<div class="col-xs-12 col-md-12"><input type="submit" id="form-submit" class="btn btn-lg form" name="form-submit"></div>
 				</div>				
 			</div>
@@ -160,11 +160,11 @@
 			</div>
 		</div>
 	</footer>
-	<!-- jQuery library -->
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+	<!-- jQuery library -->	
 	<script src="js/jquery.min.js"></script>
-	<!-- Bootstrap library -->
-	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+	<!-- Bootstrap library -->	
 	<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
+	<!-- Main.js -->	
+	<script src="js/main.js"></script>
 </body>
 </html>
