--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="navbar-brand" rel="nofollow">
 						<span>
 							<!--<img src="img/cafe.png"/>Rai Gomes-->
-							<img src="https://lhvqdq-ch3301.files.1drv.com/y4pqVxO0eCEAuh4zwjq06HGKURhzuJU_OokVGoA9oXm9b_4tFZ8C3hJ2Chaf0YhRu_YdkeJ8EYulQiHgGYsMJHPIy82f2Qk6-fkry0q2oa3QzbyTTPjaipbdT3lKq_eSmElpsO0YvWmIIkkMvl2EoUwGp8uDmeOHgv1_OL_JMh3k3sLFTZLL_ppAcsD9_AOojruzbXD1ZFCbLDXY0sfFNVITw/cafe.png?psid=1" width="48" height="48" />Rai Gomes
+							<img src="http://imageshack.com/a/img924/2367/VoWbbd.png" width="48" height="48" />Rai Gomes
 						</span>
 					</a>			
 				</div>	
@@ -40,7 +40,7 @@
 				<div class="col-sm-4 col-md-4">
 					<div id="sobre-photo">
 						<!--<img src="img/Rai.jpg" class="img-circle img-responsive"/>-->
-						<img src="https://lhvndq-ch3301.files.1drv.com/y4m_HUK3hq6yFYT6EKGaj0UV2Ecu0aqde_rvI_CjRLWXGcXJHrQ_u-G7GBps2YyLzyGT8R4tuBfzg0EG5OrMJC2rgSfo74y4Wv-Wfu3BD5JIWjO5TF6niS84GqIQ0RfJlFfqA5GAi_UwR0SDisOqjzcBWOVSsh3qOEvuPHB2IZpWWpk2XB28iYpSte18yS766fcESUA2sToSOc4uYpLPdJfBg?width=457&height=336&cropmode=none" width="457" height="336" class="img-circle img-responsive" />
+						<img src="http://imageshack.com/a/img922/8599/7F1uul.jpg" width="457" height="336" class="img-circle img-responsive" />
 					</div>
 				</div>
 				<div class="col-sm-8 col-md-8">
@@ -60,7 +60,7 @@
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-bootstrap-plain colored"></i></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-javascript-plain colored"></i></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-jquery-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><img src="https://lhvrdq-ch3301.files.1drv.com/y4pknmGKsmJKIY6okjbnkXDIslCqfUaEeW2bsq3jv9X5VVmukOhhAjw4aK0J26qtc6zaPPxUw1YrMl6mvQWSOUi-93w-_4QOVFqyRC2-dknxaq2GHCCf_hQ03TilAgl5ObSJi4lwX4L4g97HfkYJzm-SZ2T5FnKGS3iuk0R8-8BGgeZi1RExVMxj0jFXwe3N6s8PYF434ccD80pnhqK2jMQMw/pega.png?psid=1"></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><img src="http://imageshack.com/a/img923/2928/wLIxbQ.png"></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-java-plain-wordmark"></i></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-oracle-original colored"></i></div>					
@@ -75,7 +75,7 @@
 				<div id="port1" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-1">
+							<img src="http://imageshack.com/a/img923/9206/KnZIEc.png" alt="" class="figure-img img-fluid port-img" id="port-img-1">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -83,7 +83,7 @@
 				<div id="port2" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-2">
+							<img src="http://imageshack.com/a/img923/9206/KnZIEc.png" alt="" class="figure-img img-fluid port-img" id="port-img-2">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -91,7 +91,7 @@
 				<div id="port3" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-3">
+							<img src="http://imageshack.com/a/img923/9206/KnZIEc.png" alt="" class="figure-img img-fluid port-img" id="port-img-3">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
@@ -99,7 +99,7 @@
 				<div id="port4" class="col-xs-12 col-sm-6 col-md-3">
 					<div class="thumbnail"><a href="https://github.com/raigomes">
 						<figure class="figure">
-							<img src="http://bit.ly/2sAqU90" alt="" class="figure-img img-fluid port-img" id="port-img-4">
+							<img src="http://imageshack.com/a/img923/9206/KnZIEc.png" alt="" class="figure-img img-fluid port-img" id="port-img-4">
 							<figcaption class="figure-caption port-caption">Coming soon :)</figcaption>
 						</figure>
 					</a></div>
