--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap library -->	
 	<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
-	<!-- Main.js -->	
+	<!-- Main.js -->
 	<script src="js/main.js"></script>
+	<script src="js/portfolio.js"></script>
+	<script src="js/email.js"></script>
 </body>
 </html>
