Modularizando funções com IIFE

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="portfolio">
+	<section id="portfolio" onload="carregaPortfolio()">
 		<h1>Portfolio</h1><hr>		
 		<div class="container">
 			<div class="row">
@@ -164,9 +164,9 @@
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap library -->	
 	<script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
-	<!-- Main.js -->
+	<!-- Main.js -->	
+	<!--<script src="js/portfolio.js"></script>
+	<script src="js/email.js"></script>-->
 	<script src="js/main.js"></script>
-	<script src="js/portfolio.js"></script>
-	<script src="js/email.js"></script>
 </body>
 </html>
