Incluindo 'target=_blank' nos botões das redes sociais

--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,15 @@
 					<h4>My skills:</h4>
 				</div>
 				<div class="row row-icon">
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-html5-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-css3-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-bootstrap-plain colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-javascript-plain colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-jquery-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-html5-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-css3-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-bootstrap-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-javascript-plain colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-jquery-plain-wordmark colored"></i></div>
 					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><img src="http://imageshack.com/a/img923/2928/wLIxbQ.png"></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-dot-net-plain-wordmark colored"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-java-plain-wordmark"></i></div>
-					<div class="skills-icon col-xs-4 col-sm-4 col-md-4"><i class="devicon-oracle-original colored"></i></div>					
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-dot-net-plain-wordmark colored"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-java-plain-wordmark"></i></div>
+					<div class="skills-icon col-xs-4 col-sm-4 col-md-4" target='_blank'><i class="devicon-oracle-original colored"></i></div>					
 				</div>
 			</div>
 		</div>
@@ -145,11 +145,11 @@
 			<div class="container">	
 				<h1 id="social-title">Social Media</h1><hr>
 				<div id="social-button" class="row">
-					<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
-					<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
-					<div class="col-xs-2 col-md-2"><a href="https://github.com/raigomes" class="btn btn-default"><i class="fa fa-github" aria-hidden="true"></i></a></div>
-					<div class="col-xs-2 col-md-2"><a href="https://codepen.io/raigomes" class="btn btn-default"><i class="fa fa-codepen" aria-hidden="true"></i></a></div>
-					<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://www.facebook.com/raigomesm" class="btn btn-primary" target='_blank'><i class="fa fa-facebook-official" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://www.linkedin.com/in/raigomesm/" class="btn btn-linkedin" target='_blank'><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://github.com/raigomes" class="btn btn-default" target='_blank'><i class="fa fa-github" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://codepen.io/raigomes" class="btn btn-default" target='_blank'><i class="fa fa-codepen" aria-hidden="true"></i></a></div>
+					<div class="col-xs-2 col-md-2"><a href="https://www.freecodecamp.com/raigomes" class="btn btn-success" target='_blank'><i class="fa fa-free-code-camp" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 		</div>
